Fix: slide out menu

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,29 +44,6 @@
     leading-relaxed tracking-[0.5em] uppercase md:text-sm;
   }
 
-  /*.btn {*/
-  /*  @apply border border-solid font-sans text-base py-2 px-5 tracking-[0.4em]*/
-  /*  uppercase hover:border-primary hover:text-primary hover:transform hover:transition hover:ease-in-out hover:scale-x-105 hover:-translate-y-1 hover:duration-300;*/
-  /*}*/
-
-  /*.btn-primary {*/
-  /*  @apply border-primary text-primary active:bg-primary/20;*/
-  /*}*/
-
-  /*.btn-light {*/
-  /*  @apply border-body-light text-body-light hover:border-primary hover:text-primary active:bg-primary/20;*/
-  /*}*/
-
-  /*.btn-dark {*/
-  /*  @apply border-background-dark text-background-dark active:bg-primary/20;*/
-  /*}*/
-  /*.btn-flat {*/
-  /*  @apply border-0 text-primary active:bg-primary/20;*/
-  /*}*/
-  /*.btn-solid {*/
-  /*  @apply bg-primary  border-primary text-sm text-background-dark w-full py-4 px-4 transition-all duration-300 uppercase hover:text-background-dark hover:transform-none hover:transition-none active:bg-primary/50;*/
-  /*}*/
-
   p {
     @apply font-body text-sm text-body;
   }
@@ -93,5 +70,5 @@
   opacity: 0;
 }
 .router-link-active {
-  color: #A57C52;
+  color: #a57c52;
 }
