--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   src: local('caviar-dreams'),
-    url('./assets/fonts/caviar-dreams.woff') format('woff');
+    url('assets/fonts/caviar-dreams.woff') format('woff');
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-style: normal;
   font-weight: 700;
   src: local('caviar-dreams-bold'),
-    url('./assets/fonts/caviar-dreams-bold.woff') format('woff');
+    url('assets/fonts/caviar-dreams-bold.woff') format('woff');
 }
 
 @font-face {
@@ -19,7 +19,7 @@
   font-style: normal;
   font-weight: 400;
   src: local('campton-light'),
-    url('./assets/fonts/campton-light.woff') format('woff');
+    url('assets/fonts/campton-light.woff') format('woff');
 }
 
 @font-face {
@@ -27,7 +27,7 @@
   font-style: normal;
   font-weight: 400;
   src: local('campton-thin'),
-    url('./assets/fonts/campton-thin.woff') format('woff');
+    url('assets/fonts/campton-thin.woff') format('woff');
 }
 
 .router-link-active {
@@ -36,10 +36,11 @@
 
 html {
   scroll-behavior: smooth; /* set scroll-behaviour to smooth here */
+  font-family: var(--maz-font-family);
+  line-height: 1.5;
 }
 
 body {
   background-color: #ebebeb;
 }
-
 
